<resources>
    <string name="app_name">My Points Counter</string>
    <string name="txt_suma">Suma</string>
    <string name="txt_resta">Resta</string>
    <string name="txt_reset">Reset</string>
    <string name="txt_save">Guardar puntuación</string>
    <string name="txt_saved_info">Puntuación guardada correctamente\n%s</string>
    <string name="txt_info_reset">El contador ya está a <b>cero</b>.</string>
    <string name="contador">contador</string>
    <string name="save">guardar</string>
    <string name="error">No se ha guardado la puntuación</string>
    <string name="filename">MyPointsCounter.txt</string>
    <string name="op1_menu">Historial</string>
    <string name="txt_puntuacion">En la fecha %s, a las %s horas,\nse registró una puntuación de %d punto/os.</string>
    <string name="txt_errorDelete">No se pudo eliminar la puntuación</string>
    <string name="txt_sinItems">No existen puntaciones registradas</string>
    <string name="txt_borrado">Puntuación eliminada</string>
    <string name="txt_deshacer">Deshacer</string>
</resources>